--- a/PROJETO STOCKFLOW/index.html
+++ b/PROJETO STOCKFLOW/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Stockflow</title>
+    <link rel="icon" type="image/icon" href="/public/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StockFlow</title>
   </head>
   <body>
     <div id="root"></div>
